# readability-js

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: complex.html  readability_js_bench.rs  simple.html
core/js/: bundled.js  package-lock.json  package.json  script.js
core/src/: lib.rs  readability.rs
