[package]
name = "readability-js-cli"
version.workspace = true
edition = "2024"
description = "Command-line interface for readability-js"
license = "UPL-1.0"
repository = "https://github.com/egemengol/readability-js"
homepage = "https://github.com/egemengol/readability-js"
readme = "../README.md"
keywords = ["readability", "wrapper", "html", "parsing" ]

[[bin]]
name = "readable"
path = "src/main.rs"

[dependencies]
bat = "0.25.0"
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
html2md = { version = "0.2.15" }
log = { version = "0.4.28", features = ["std"] }
readability-js = {workspace = true, features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
simple_logger = "5.0.0"
ureq = "3.1.2"
url = {workspace = true}
